@@ -72,5 +72,5 @@ pref("alerts.height", 50);
 pref("network.dns.disablePrefetch", true);
 pref("network.dns.disablePrefetchFromHTTPS", true);
 
-/* Remove accept-encoding HTTP request header for aria2 xml-rpc */
-pref("network.http.accept-encoding", "gzip;q=0,deflate;q=0");
+/* Remove accept-encoding HTTP request header for aria2 xml-rpc for debugging purpose */
+// pref("network.http.accept-encoding", "gzip;q=0,deflate;q=0");
